refactor: changed construction of ColumnIDs
from multiple constructors to builder pattern